# haskell_entry

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml
chapter1/: ChangeLog.md  README.md  chapter1.cabal  package.yaml
chapter1/app/: Coord.hs  HTMLEscapedString.hs  Nginx.hs  Optional.hs  VisitorIsTooLarge.hs  escape.hs  genconf.hs  parallel.hs
chapter2/: README.md  chapter2.cabal  package.yaml
chapter3/: README.md  chapter3.cabal  package.yaml
chapter3/src/: Sample.hs
chapter4/: Lazy.hs  Main.hs  README.md  chapter4.cabal  package.yaml  stack.yaml
chapter5/: README.md  chapter5.cabal  package.yaml  stack.yaml
chapter5/src/: ConverterWriter.hs  Lib.hs  LogWriter.hs  Reader.hs  SampleMonad.hs  StackState.hs  ToInt.hs
chapter6/: README.md  chapter6.cabal  stack.yaml
chapter6/app/: DoctestSample.hs  Main.hs
chapter6/src/: EscapedString.hs  InferenceRule.hs  PowerOf2.hs  RLE.hs  Sudoku.hs
helloworld/: ChangeLog.md  README.md  helloworld.cabal  package.yaml  stack.yaml
other_langs/clang/: Dockerfile  docker-compose.yaml  parallel.c  powerof2.cpp  powerof2.hpp  sample.cpp  tarai.cpp  toint.cpp
other_langs/java/: TestVisitor.java  docker-compose.yaml
other_langs/python/: docker-compose.yaml  entrypoint.sh  genconf.py  nginx.conf.j2
other_langs/ruby/: docker-compose.yaml  escape.rb
yackage-0.8.1/: README.md
