cabal-version: 2.2

name:           chapter5
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/chapter3#readme>
license:        BSD-3-Clause
build-type:     Simple
extra-source-files:
    README.md

library
  exposed-modules:
      Sample
  other-modules:
      Paths_chapter5
  autogen-modules:
      Paths_chapter5
  hs-source-dirs:
      src
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
  build-depends:
      base >=4.7 && <5
  default-language: Haskell2010

test-suite chapter5-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_chapter5
  autogen-modules:
      Paths_chapter5
  hs-source-dirs:
      test
  ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wmissing-export-lists -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , chapter3
  default-language: Haskell2010
